[CMS-3] Update in getplayers and getteams API
